# ca-cafo-compliance

./: .gitignore  README.md  debug_table.ipynb  pyproject.toml  requirements.txt  update_file_list.py
.streamlit/: config.toml
ca_cafo_compliance/: ReadPermits_Nutrient_Applications_Region5.ipynb  __init__.py  app.py  calculate_manure_milk.py  calculate_metrics.py  calculated_metrics.csv  consolidate_data.py  consolidate_manifests.sh  conversion_factors.py  extract_full_text_parameters.py  extract_manifest_parameters.py  extract_manifests.py  extract_pdf_text copy.py  extract_pdf_text.py  extract_pdf_text_old.py  helpers_calculated_metrics.py  helpers_geocoding.py  helpers_pdf_metrics.py  helpers_plotting.py  identify_files_to_delete.py  manifest_app.py  parameter_locations copy.csv  parameter_locations.csv  parameters.csv  pdf_ocr.py  plotting.py  read_r2_reports.py  read_r5_reports.py  read_reports.py  step0_summarize_pdfs.py  step1_pdf_ocr.py  step2a_extract_full_text_parameters.py  step2b_extract_manifest_parameters.py  step3_update_manual_manifests.py  step4_create_final_manifests.py  step5_consolidate_manifests.sh  summarize_pdfs.py
ca_cafo_compliance/data/: Detailed_Violation_Report.csv  Manifest_Data_Template_for_Daly.csv  conversion_factors.csv  county_region.csv  manifest_parameter_locations.csv  manifest_parameters.csv  old.csv  parameter_locations.csv  parameters.csv  reports_available.csv  template_key_pages.csv  templates.csv  zipcode_to_county.csv
data/: reports_available.csv
outputs/: file_list.csv  geocoding_cache.json
(+4130 files in other folders)
