[tool.poetry]
name = "ca-cafo-compliance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
pdfplumber = "^0.11.6"
pypdf = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
